--- a/client/public/index.html
+++ b/client/public/index.html
@@ -13,5 +13,7 @@
     </noscript>
     <div id="app"></div>
     <!-- built files will be auto injected -->
+
+    <script src="https://kit.fontawesome.com/c1c239f91b.js" crossorigin="anonymous"></script>
   </body>
 </html>
